tests/35-bytes-param-with-invalid-value-1.stderr
error: encountered invalid value argument for #[bitfield] bytes parameter
 --> $DIR/35-bytes-param-with-invalid-value-1.rs:4:20
  |
4 | #[bitfield(bytes = true)]
  |                    ^^^^
